2011-01-20  James Robinson  <jamesr@chromium.org>

        Reviewed by Darin Fisher.

        Implement mozilla's requestAnimationFrame API
        https://bugs.webkit.org/show_bug.cgi?id=51218

        This implements mozilla's proposed requestAnimationFrame API.  The idea with this API is that
        an author driving an animation from script could use window.requestAnimationFrame(callback)
        instead of window.setTimeout(callback, 0) to schedule their update logic and let the browser
        decide when to update the animations.  This avoids doing unnecessary work when the page content
        is offscreen or is being displayed at a different framerate than what the page author expects.

        Mozilla's proposal is here: https://developer.mozilla.org/en/DOM/window.mozRequestAnimationFrame
        This implements window.mozRequestAnimationFrame as window.webkitRequestAnimationFrame with the
        following changes:
        *) Only the callback syntax is supported, there is no before paint event
        *) webkitRequestAnimationFrame supports a second parameter Element to let the author indicate
            what content they intend to animate.  That way if the page is being displayed but the element
            in question is offscreen, we can avoid invoking the callback.
        *) No timestamp is provided to the caller and there is no window.animationStartTime property
            (see https://bugs.webkit.org/show_bug.cgi?id=51952 for discussion of this property)
        *) window.webkitRequestAnimationFrame returns a numerical id that can be used to cancel the callback
            using window.cancelWebkitRequestAnimationFrame, to parallel window.setTimeout()/window.clearTime().

        The implementation depends on the embedder scheduling the callbacks since the callback invocation
        depends on the page's visibility and the embedder's paint scheduling, neither of which are exposed